fixing spacing issues

--- a/src/Left_SideBar.css
+++ b/src/Left_SideBar.css
@@ -1,7 +1,7 @@
 .side_container{
   flex-direction: column;
   position:relative;
-  left:101%;
+  left: 100.3%;
   display: flex;
   max-width:4%;
 }
@@ -21,8 +21,6 @@ font-size: 190%;
   border: none;
   cursor: pointer;
   background-color: transparent;
-  padding: 0%;
-  margin-bottom: 0%;
 }
 .side-button:hover {
   transition: 0.3s ease;
